mock-service/mock-worktest-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-status-deployment
  labels:
    app: random-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-status
  template:
    metadata:
      labels:
        app: random-status
    spec:
      containers:
        - name: random-status
          image: solsson/httpstatus-random
          ports:
            - name: random
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: random-status-service
spec:
  selector:
    app: random-status
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worktest-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: worktest-alb-ingress
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "alb-work.test"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: random-status-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worktest-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "nginx-work.test"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: random-status-service
                port:
                  number: 80
